--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
       border-bottom: 1px solid #ccc;
     }
 
-    .cart-icon-x {
+    .menu-icon, .cart-icon {
       width: 22px;
       height: 16px;
       position: relative;
@@ -45,7 +45,7 @@
       align-items: center;
     }
 
-    .cart-icon-x div {
+    .menu-icon div, .cart-icon div {
       position: absolute;
       width: 100%;
       height: 2px;
@@ -53,19 +53,19 @@
       transition: all 0.4s ease;
     }
 
-    .cart-icon-x div:nth-child(1) { top: 0; }
-    .cart-icon-x div:nth-child(2) { top: 7px; }
-    .cart-icon-x div:nth-child(3) { top: 14px; }
+    .menu-icon div:nth-child(1), .cart-icon div:nth-child(1) { top: 0; }
+    .menu-icon div:nth-child(2), .cart-icon div:nth-child(2) { top: 7px; }
+    .menu-icon div:nth-child(3), .cart-icon div:nth-child(3) { top: 14px; }
 
-    .cart-icon-x.open div:nth-child(1) {
+    .menu-icon.open div:nth-child(1), .cart-icon.open div:nth-child(1) {
       transform: rotate(45deg); top: 7px;
     }
 
-    .cart-icon-x.open div:nth-child(2) {
+    .menu-icon.open div:nth-child(2), .cart-icon.open div:nth-child(2) {
       opacity: 0;
     }
 
-    .cart-icon-x.open div:nth-child(3) {
+    .menu-icon.open div:nth-child(3), .cart-icon.open div:nth-child(3) {
       transform: rotate(-45deg); top: 7px;
     }
 
@@ -82,16 +82,22 @@
 
     .logo-text {
       font-family: 'Cardo', serif;
-      font-size: 26px;
+      font-size: 24px;
       font-weight: 900;
       line-height: 1;
       white-space: nowrap;
-      margin-top: 2px;
     }
 
     .logo-image {
       height: 88px;
       display: none;
+    }
+
+    .cart-icon-container {
+      display: flex;
+      align-items: center;
+      margin-top: -4px;
+      height: 26px;
     }
 
     .image-box {
@@ -170,32 +176,39 @@
       transform: translateX(0);
     }
 
+    .product-section {
+      text-align: center;
+      margin-bottom: 32px;
+    }
+
+    .colorway-circle {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      margin: 8px auto;
+      background-color: gray;
+    }
+
+    .product-title {
+      font-family: 'Oswald', sans-serif;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    .product-price {
+      font-family: 'Oswald', sans-serif;
+      font-size: 18px;
+      font-weight: 400;
+    }
+
     .product-image-box {
       width: 90%;
       max-width: 400px;
       height: 500px;
       background-color: #f2f2f2;
-      margin: 40px auto 16px auto;
+      margin: 40px auto 12px auto;
       border-radius: 6px;
       cursor: pointer;
-    }
-
-    .product-info {
-      font-family: 'Oswald', sans-serif;
-      text-align: center;
-      padding: 0 16px;
-      margin-bottom: 32px;
-    }
-
-    .product-title {
-      font-weight: 700;
-      font-size: 22px;
-      margin-bottom: 6px;
-    }
-
-    .product-price {
-      font-weight: 400;
-      font-size: 20px;
     }
 
     @media (min-width: 768px) {
@@ -204,119 +217,159 @@
   </style>
 </head>
 <body>
-<header>
-  <div class="logo-container" id="logoContainer" role="button" tabindex="0">
-    <span class="logo-text" id="logoText">MATT SCIANNA</span>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" />
+  <header>
+    <div id="menuToggle" class="menu-icon" role="button" tabindex="0">
+      <div></div><div></div><div></div>
+    </div>
+
+    <div class="logo-container" id="logoContainer" role="button" tabindex="0">
+      <span class="logo-text" id="logoText">MATT SCIANNA</span>
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" />
+    </div>
+
+    <div id="cartIcon" class="cart-icon" title="Cart">
+      <div></div><div></div><div></div>
+    </div>
+  </header>
+
+  <div class="image-box">
+    <div class="slider" id="slider">
+      <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
+      <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
+      <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+    </div>
+    <div class="arrow left" onclick="prevSlide()"></div>
+    <div class="arrow right" onclick="nextSlide()"></div>
   </div>
 
-  <div id="cartIcon" class="cart-icon-x" title="Cart">
-    <div></div><div></div><div></div>
+  <a href="/jersey/red" style="text-decoration: none; color: inherit;">
+    <div class="product-image-box"></div>
+  </a>
+  <div class="product-section">
+    <div class="colorway-circle"></div>
+    <div class="product-title">TWO-FIVE JERSEY</div>
+    <div class="product-price">$50.00</div>
   </div>
-</header>
 
-<div class="image-box">
-  <div class="slider" id="slider">
-    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
-    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
-    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+  <a href="/jersey/white" style="text-decoration: none; color: inherit;">
+    <div class="product-image-box"></div>
+  </a>
+  <div class="product-section">
+    <div class="colorway-circle"></div>
+    <div class="product-title">TWO-FIVE JERSEY</div>
+    <div class="product-price">$50.00</div>
   </div>
-  <div class="arrow left" onclick="prevSlide()"></div>
-  <div class="arrow right" onclick="nextSlide()"></div>
-</div>
 
-<a href="/jersey/red" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box"></div>
-</a>
-<div class="product-info">
-  <div class="product-title">TWO-FIVE JERSEY (RED)</div>
-  <div class="product-price">$50.00</div>
-</div>
+  <nav id="sidebar" class="sidebar"><p>Menu sidebar content goes here.</p></nav>
+  <nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
 
-<a href="/jersey/white" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box"></div>
-</a>
-<div class="product-info">
-  <div class="product-title">TWO-FIVE JERSEY (WHITE)</div>
-  <div class="product-price">$50.00</div>
-</div>
+  <script>
+    const menuToggle = document.getElementById('menuToggle');
+    const sidebar = document.getElementById('sidebar');
+    const cartIcon = document.getElementById('cartIcon');
+    const cartSidebar = document.getElementById('cartSidebar');
+    const logoText = document.getElementById('logoText');
+    const logoImage = document.getElementById('logoImage');
+    const logoContainer = document.getElementById('logoContainer');
+    const slider = document.getElementById('slider');
+    let currentIndex = 0;
+    let currentLogoState = 'text';
+    let scrollPosition = 0;
 
-<nav id="sidebar" class="sidebar"> <p>Menu sidebar content goes here.</p> </nav>
-<nav id="cartSidebar" class="cart-sidebar"> <p>Cart sidebar content goes here.</p> </nav>
+    const slides = slider.children;
 
-<script>
-  const cartIcon = document.getElementById('cartIcon');
-  const cartSidebar = document.getElementById('cartSidebar');
-  const logoText = document.getElementById('logoText');
-  const logoImage = document.getElementById('logoImage');
-  const logoContainer = document.getElementById('logoContainer');
-  const slider = document.getElementById('slider');
-  let currentIndex = 0;
-  let scrollPosition = 0;
-
-  const slides = slider.children;
-
-  function updateSlide(index) {
-    slider.style.transform = `translateX(-${index * 100}%)`;
-  }
-
-  function nextSlide() {
-    currentIndex = (currentIndex + 1) % slides.length;
-    updateSlide(currentIndex);
-  }
-
-  function prevSlide() {
-    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-    updateSlide(currentIndex);
-  }
-
-  setInterval(nextSlide, 10000);
-
-  function updateLogoVisibility() {
-    if (window.scrollY > 40) {
-      logoText.style.display = 'none';
-      logoImage.style.display = 'block';
-    } else {
-      logoText.style.display = 'block';
-      logoImage.style.display = 'none';
+    function updateSlide(index) {
+      slider.style.transform = `translateX(-${index * 100}%)`;
     }
-  }
 
-  window.addEventListener('scroll', () => {
-    if (!document.body.classList.contains('sidebar-open') && !document.body.classList.contains('cart-open')) {
-      updateLogoVisibility();
+    function nextSlide() {
+      currentIndex = (currentIndex + 1) % slides.length;
+      updateSlide(currentIndex);
     }
-  });
 
-  cartIcon.addEventListener('click', () => {
-    const isOpen = cartSidebar.classList.toggle('open');
-    cartIcon.classList.toggle('open', isOpen);
-
-    if (isOpen) {
-      scrollPosition = window.scrollY;
-      document.body.classList.add('cart-open');
-      document.body.style.top = `-${scrollPosition}px`;
-      document.body.style.position = 'fixed';
-    } else {
-      document.body.classList.remove('cart-open');
-      document.body.style.position = '';
-      document.body.style.top = '';
-      window.scrollTo(0, scrollPosition);
+    function prevSlide() {
+      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      updateSlide(currentIndex);
     }
-  });
 
-  logoContainer.addEventListener('click', () => {
-    window.location.href = '/';
-    window.location.reload();
-  });
+    setInterval(nextSlide, 10000);
 
-  ['logoContainer', 'cartIcon'].forEach(id => {
-    document.getElementById(id).addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') e.target.click();
+    function updateLogoVisibility() {
+      if (window.scrollY > 40) {
+        logoText.style.display = 'none';
+        logoImage.style.display = 'block';
+        currentLogoState = 'image';
+      } else {
+        logoText.style.display = 'block';
+        logoImage.style.display = 'none';
+        currentLogoState = 'text';
+      }
+    }
+
+    window.addEventListener('scroll', () => {
+      if (!document.body.classList.contains('sidebar-open') && !document.body.classList.contains('cart-open')) {
+        updateLogoVisibility();
+      }
     });
-  });
 
-  document.addEventListener('DOMContentLoaded', updateLogoVisibility);
-</script>
+    menuToggle.addEventListener('click', () => {
+      const isOpen = menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open', isOpen);
+
+      if (cartSidebar.classList.contains('open')) {
+        cartSidebar.classList.remove('open');
+        cartIcon.classList.remove('open');
+        document.body.classList.remove('cart-open');
+      }
+
+      if (isOpen) {
+        scrollPosition = window.scrollY;
+        document.body.classList.add('sidebar-open');
+        document.body.style.top = `-${scrollPosition}px`;
+        document.body.style.position = 'fixed';
+      } else {
+        document.body.classList.remove('sidebar-open');
+        document.body.style.position = '';
+        document.body.style.top = '';
+        window.scrollTo(0, scrollPosition);
+      }
+    });
+
+    cartIcon.addEventListener('click', () => {
+      const isOpen = cartSidebar.classList.toggle('open');
+      cartIcon.classList.toggle('open', isOpen);
+
+      if (sidebar.classList.contains('open')) {
+        sidebar.classList.remove('open');
+        menuToggle.classList.remove('open');
+        document.body.classList.remove('sidebar-open');
+      }
+
+      if (isOpen) {
+        scrollPosition = window.scrollY;
+        document.body.classList.add('cart-open');
+        document.body.style.top = `-${scrollPosition}px`;
+        document.body.style.position = 'fixed';
+      } else {
+        document.body.classList.remove('cart-open');
+        document.body.style.position = '';
+        document.body.style.top = '';
+        window.scrollTo(0, scrollPosition);
+      }
+    });
+
+    logoContainer.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.location.reload();
+    });
+
+    ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
+      document.getElementById(id).addEventListener('keydown', (e) => {
+        if (e.key === 'Enter') e.target.click();
+      });
+    });
+
+    document.addEventListener('DOMContentLoaded', updateLogoVisibility);
+  </script>
 </body>
 </html>
