--- a/website/index.html
+++ b/website/index.html
@@ -174,20 +174,18 @@
       margin-bottom: 32px;
     }
 
-    .colorway-circle {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      margin: 12px auto;
-      background-size: cover;
-      background-position: center;
-      background-color: #ccc;
-    }
-
     .product-title {
       font-family: 'Oswald', sans-serif;
       font-size: 20px;
       font-weight: 700;
+    }
+
+    .product-color {
+      font-family: 'Oswald', sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      color: black;
+      margin: 4px 0;
     }
 
     .product-price {
@@ -242,8 +240,8 @@
     <div class="product-image-box"></div>
   </a>
   <div class="product-section">
-    <div class="colorway-circle" style="background-image: url('YOUR_IMAGE_LINK_HERE_1');"></div>
     <div class="product-title">TWO-FIVE JERSEY</div>
+    <div class="product-color">RED</div>
     <div class="product-price">$50.00</div>
   </div>
 
@@ -252,8 +250,8 @@
     <div class="product-image-box"></div>
   </a>
   <div class="product-section">
-    <div class="colorway-circle" style="background-image: url('YOUR_IMAGE_LINK_HERE_2');"></div>
     <div class="product-title">TWO-FIVE JERSEY</div>
+    <div class="product-color">WHITE</div>
     <div class="product-price">$50.00</div>
   </div>
 
@@ -353,7 +351,7 @@
     });
 
     logoContainer.addEventListener('click', () => {
-      window.location.href = '/';
+      location.reload(); // refresh page and scroll to top
     });
 
     ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
